<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/activatedBackgroundIndicator">

    <ImageView
        android:id="@+id/list_row_thumbnail"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bordered_background"
        android:contentDescription="@string/spot_thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/questionmark" />

    <TextView
        android:id="@+id/list_row_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/title_tag"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/list_row_description"
        app:layout_constraintEnd_toStartOf="@+id/list_row_right_chevron"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/list_row_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_row_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tag"
        android:textColor="#343434"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list_row_right_chevron"
        app:layout_constraintStart_toEndOf="@+id/list_row_thumbnail" />

    <ImageView
        android:id="@+id/list_row_right_chevron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:focusable="false"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>